--- a/algorithms/retry-algorithms/backend/unstable-server/package.json
+++ b/algorithms/retry-algorithms/backend/unstable-server/package.json
@@ -6,6 +6,7 @@
     "start": "node api/index.js"
   },
   "dependencies": {
+    "axios": "^1.7.2",
     "express": "^4.17.1"
   },
   "devDependencies": {
